test/types/string/dmk/oobbyte3a.good
oobbyte3a.chpl:2: error: halt reached - index 20 out of bounds for string with 11 bytes
