test/types/string/dmk/oobbyte3a.chpl
config const i = 20;
writeln("événement".byte(i));
